# thinking-lenses-project

./: .gitignore  app_bagua.py  bagua_generator.py  main.py  math_verification.py  math_verification_web.py  pyproject.toml  requirements.txt  run.bat  run.py
app/: __init__.py
app/routes/: api_routes.py  bagua_routes.py  main_routes.py  math_routes.py
app/services/: mongodb.py
app/services/math_core/: binary_verification.py  calculus_verification.py  e_verification.py  phi_verification.py  pi_verification.py  primes_verification.py  probability_verification.py  symmetry_verification.py
app/services/utils/: config.py
app/services/visualization/: base64_encoder.py
app/static/css/: index.css  verification.css
app/static/js/: index.js  verification.js
app/templates/: index.html  verification.html  verification_backup.html
legacy/: app.py  app_original.py  app_streamlit.py  bagua_web.py  test_app.py
math_core/: __init__.py  binary_verification.py  calculus_verification.py  e_verification.py  phi_verification.py  pi_verification.py  primes_verification.py  probability_verification.py  symmetry_verification.py
memory-bank/: activeContext.md  activeContext_101.md  file-management-policy.md  mongodb-integration.md  productContext.md  progress.md  progress_101.md  projectbrief.md  systemPatterns.md  techConstraints.md  techContext.md  uv-usage.md
tests/: conftest.py  test_api.py  test_app.py  test_e2e.py
web_routes/: __init__.py  verification_routes.py
