[project]
name = "pyproj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "langchain-core>=0.3.65",
    "langchain-ollama>=0.3.3",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "pillow>=11.2.1",
    "plotly>=6.1.2",
    "pymongo[srv]>=4.13.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "streamlit>=1.45.1",
    "sympy>=1.14.0",
]
